# document-extraction-api

./: .gitignore  INSTALLATION.md  OPENAI_INTEGRATION.md  README.md  adapters.py  api.py  app.py  asgi.py  asgi_adapter.py  document_extractor.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  run.py  sample_finance.txt  sample_invoice.txt  server.py  start.sh  test_document_api.py  test_faiss_query.py  test_faiss_vector.py  test_openai.py  test_simple_vector.py  test_text_extraction.py  test_text_vector_store.py  test_vector_api.py  test_vector_store.py  wsgi.py
api/: __init__.py  models.py  vector_service.py
static/: main.css  main.js  style.css  test.css
templates/: index.html  index.html.new  test.html
utils/: __init__.py  azure_openai_config.py  document_chunking.py  openai_service.py  pdf_extractor.py  vector_store.py
vector_db/: chroma.sqlite3
