[tool.poetry]
name = "document-data-extractor"
version = "0.1.0"
description = "A document data extraction tool using AI"
authors = ["Replit User <user@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.0"
gunicorn = "^21.2.0"
openai = "^1.0.0"
pypdf = "^3.15.1"
flask-sqlalchemy = "^3.0.0"
pydantic = "^2.11.2"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
werkzeug = "^3.1.3"
pymupdf = "^1.25.5"
langchain = "^0.3.23"
langchain-openai = "^0.3.12"
langchain-core = "^0.3.51"
trafilatura = "^2.0.0"
chromadb = "0.4.18"
langchain-community = "^0.3.21"
langchain-chroma = "^0.2.2"
langgraph = "^0.3.25"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"